# CDMFT-LANC-ED

./: .ED_BATH.f90.swp  .ED_FIT_CHI2.f90.swp  .ED_GF_NORMAL.f90.swp  .ED_HLOC_DECOMPOSITION.f90.swp  .ED_OBSERVABLES.f90.swp  .ED_VARS_GLOBAL.f90.swp  .gitignore  CDMFT_ED.f90  CMakeLists.txt  ED_AUX_FUNX.f90  ED_BATH.f90  ED_BATH_FUNCTIONS.f90  ED_CHI_DENS.f90  ED_CHI_FUNCTIONS.f90  ED_CHI_SPIN.f90  ED_DIAG.f90  ED_EIGENSPACE.f90  ED_FIT_CHI2.f90  ED_FIT_GENERAL.f90  ED_FIT_REPLICA.f90  ED_GF_NORMAL.f90  ED_GF_SHARED.f90  ED_GREENS_FUNCTIONS.f90  ED_HAMILTONIAN.f90  ED_HAMILTONIAN_COMMON.f90  ED_HAMILTONIAN_DIRECT_HxV.f90  ED_HAMILTONIAN_SPARSE_HxV.f90  ED_HLOC.f90  ED_HLOC_DECOMPOSITION.f90  ED_INPUT_VARS.f90  ED_IO.f90  ED_MAIN.f90  ED_OBSERVABLES.f90  ED_SETUP.f90  ED_SPARSE_MAP.f90  ED_SPARSE_MATRIX.f90  ED_VARS_GLOBAL.f90  README.md
ED_BATH/: .user_aux.f90.swp  dmft_aux.f90  hbath_setup.f90  hbath_setup_lattice.f90  hreplica_setup.f90  hreplica_setup_lattice.f90  user_aux.f90
ED_HAMILTONIAN/: diag_hybr_bath.f90
ED_HAMILTONIAN/direct/: HxV_dw.f90  HxV_local.f90  HxV_non_local.f90  HxV_up.f90
ED_HAMILTONIAN/direct_mpi/: HxV_dw.f90  HxV_local.f90  HxV_non_local.f90  HxV_up.f90
ED_HAMILTONIAN/sparse/: H_dw.f90  H_local.f90  H_non_local.f90  H_up.f90
ED_HAMILTONIAN/stored/: H_dw.f90  H_local.f90  H_non_local.f90  H_up.f90
ED_IO/: get_Gand_all.f90  get_cluster_dm.f90  get_custom_observable.f90  get_dens.f90  get_docc.f90  get_doubles.f90  get_eimp.f90  get_g0imp_matsubara.f90  get_g0imp_realaxis.f90  get_gimp_matsubara.f90  get_gimp_realaxis.f90  get_imp_dm.f90  get_mag.f90  get_reduced_dm.f90  get_sigma_matsubara.f90  get_sigma_realaxis.f90  get_sp_dm.f90  gf_cluster.f90
ED_IO/lattice/: get_cluster_dm.f90  get_dens.f90  get_docc.f90  get_doubles.f90  get_eimp.f90  get_g0imp_matsubara.f90  get_g0imp_realaxis.f90  get_gimp_matsubara.f90  get_gimp_realaxis.f90  get_imp_dm.f90  get_mag.f90  get_reduced_dm.f90  get_sigma_matsubara.f90  get_sigma_realaxis.f90  get_sp_dm.f90
cmake/Modules/: FindMKL.cmake
drivers/: .cdn_bhz_2d.f90.swp  .cdn_hm_1dchain.f90.swp  .cdn_hm_2dsquare.f90.swp  CMakeCache.txt  auxiliary_routines.f90  cdn-kagome-fm.f90  cdn_2x2_nematic.f90  cdn_bhz_1d.f90  cdn_bhz_2d.f90  cdn_bhz_2d_adaptive_mix.f90  cdn_bhz_2d_alternated.f90  cdn_bhz_2d_edge.f90  cdn_bhz_postprocessing.f90  cdn_bhz_postprocessing_edge.f90  cdn_bhz_postprocessing_mine.f90  cdn_hm_1dchain.f90  cdn_hm_2dsquare.f90  cdn_kagome.f90  cdn_kagome2.f90  cdn_kagome_bands.f90  cdn_kagome_bands_fm.f90  cdn_kagome_fitOnly.f90  cdn_kagome_fitOnly_general.f90  cdn_kanemele.f90  cdn_kanemele_bands.f90  cdn_kanemele_extraBathParams.f90  cdn_sg77.f90  cdn_sg77_mine.f90  cdn_ssh.f90  cdn_ssh_mine.f90  cdn_ssh_postprocessing.f90  cdn_test.f90  cdn_weyl.f90  cdn_weyl_postprocessing.f90  cmake_install.cmake  edn_hm_bethe.f90  retrieve_periodize.f90  retrieve_periodize_xy.f90  sg77_1site.f90
